--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react-scripts": "^2.1.8"
   }
 }
