--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/qfernandez/CST-336-03-Nooks-Cranny#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
